# qubit-upb

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
src/: graph_decomp.py  n_rooks.py  orth_graph.py  orthogonality_graph.py  upb_io.py
tests/: conftest.py  test_upb.py
