[tool.poetry]
name = "qubit-upb"
version = "0.1.0"
description = ""
authors = ["vprusso <vincentrusso1@gmail.com>"]
readme = "README.md"
packages = [{include = "qubit_upb"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
networkx = "^3.0"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
tqdm = "^4.65.0"
six = "^1.16.0"
python-sat = "^0.1.8.dev2"
scipy = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
